# umu-launcher

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.in  README.md  ULWGL  ULWGL-VERSION  ULWGL_VERSIONS.toml  VERSIONS.txt  WIP-notes.txt  changelog_gen.sh  configure.sh  gamelauncher.py  gamelauncher.sh  gamelauncher_plugins.py  gamelauncher_test.py  gamelauncher_util.py  meson.build  meson_options.txt  org.openwinecomponents.ulwgl.launcher.yml  pyproject.toml  release_notes.md  requirements.in  ruff.toml  run  run-in-sniper  toolmanifest.vdf  ulwgl-run  ulwgl-run-cli  ulwgl-run-posix  ulwgl.1.scd  ulwgl.py  ulwgl.vdf  ulwgl_consts.py  ulwgl_dl_util.py  ulwgl_log.py  ulwgl_plugins.py  ulwgl_pressure_vessel.py  ulwgl_run.py  (+3 more)
.github/: dependabot.yml
.github/workflows/: build-umu-debian-12.yml  build-umu-debian-13.yml  build-umu-fedora-40.yml  build-umu-fedora-41.yml  build-umu-fedora-42.yml  build-umu-fedora-43.yml  build-umu-fedora.yml  build-umu-nix-flake.yml  build-umu-publish-release.yml  build-umu-snap.yml  build-umu-ubuntu-noble.yml  build-umu-ubuntu-resolute.yml  build-umu-version.yml  build-umu-zipapp.yml  build.yml  create-release.yml  e2e.yml  flatpak.yml  make.yml  release.yml  static.yml  ulwgl-python.yml  umu-python.yml  update-umu-nix-flake.yml
ULWGL/: ULWGL_VERSION.json  ULWGL_VERSION.json.in  VERSIONS.txt  reaper  ruff.toml  runtime_setup.py  ulwgl-run  ulwgl-run.in  ulwgl_consts.py  ulwgl_dl_util.py  ulwgl_log.py  ulwgl_plugins.py  ulwgl_run.py  ulwgl_test.py  ulwgl_test_plugins.py  ulwgl_util.py
ULWGL-Runner/: compatibilitytool.vdf  toolmanifest.vdf
ULWGL/ULWGL-Launcher/: compatibilitytool.vdf  toolmanifest.vdf  ulwgl-run
ULWGL/ULWGL-Runner/: compatibilitytool.vdf  ulwgl-run
ULWGL/pressure-vessel/libexec/steam-runtime-tools-0/: i386-linux-gnu-capsule-capture-libs  i386-linux-gnu-check-vulkan  i386-linux-gnu-inspect-library-libelf  launch-options.py  x86_64-linux-gnu-capsule-capture-libs  x86_64-linux-gnu-check-gl  x86_64-linux-gnu-check-vulkan  x86_64-linux-gnu-check-xdg-portal  x86_64-linux-gnu-detect-lib  x86_64-linux-gnu-inspect-library-libelf  x86_64-linux-gnu-is-x-server-xwayland  x86_64-linux-gnu-wflinfo
ULWGL/pressure-vessel/metadata/: json-glib.txt  libblkid1.txt
ULWGL/sniper_platform_0.20240125.75305/files/: manifest.dpkg  manifest.dpkg.built-using
ULWGL/sniper_platform_0.20240125.75305/files/etc/: ethertypes  ld.so.cache  locale.alias  nsswitch.conf
ULWGL/sniper_platform_0.20240125.75305/files/lib/: os-release
ULWGL/sniper_platform_0.20240125.75305/files/sbin/: ctrlaltdel  fsfreeze  fstab-decode  mkhomedir_helper  swaplabel  unix_chkpwd  (+1 more)
contrib/nix/: combine.nix  flake.nix  umu-launcher.nix  umu-run.nix
docs/: meson.build  ulwgl.1.scd  ulwgl.5.scd  umu.1.scd  umu.5.scd
packaging/: umu-launcher.desktop
packaging/deb/: 0001-deb-fix-build-by-using-rustup.patch  README.md
packaging/deb/debian/: 0001-debian-compile-using-latest-stable.patch  changelog  control  python3-umu-launcher.install  rules
packaging/deb/ubuntu/: changelog  control  rules
packaging/flatpak/: README.md  org.openwinecomponents.umu.launcher.yml  org.openwinecomponents.umu.umu-launcher.yml  umu-launcher.json
packaging/nix/: 0-Makefile-no-vendor.patch  combine.nix  flake.nix  old-unwrapped.nix  package.nix  pyzstd.nix  umu-launcher.nix  umu-run.nix  unwrapped.nix
packaging/rpm/: README.md  umu-launcher.spec
packaging/snap/: README.md  snapcraft.yaml  umu-launcher.yml
packaging/snap/snap/: snapcraft.yaml
packaging/snap/src/: desktop-launch  glxgears  glxinfo  vkcube  vulkaninfo
pressure-vessel/libexec/steam-runtime-tools-0/: i386-linux-gnu-capsule-capture-libs  i386-linux-gnu-check-gl  i386-linux-gnu-check-locale  i386-linux-gnu-check-va-api  i386-linux-gnu-check-vdpau  i386-linux-gnu-check-vulkan  i386-linux-gnu-check-xdg-portal  i386-linux-gnu-detect-lib  i386-linux-gnu-detect-platform  i386-linux-gnu-inspect-library  i386-linux-gnu-is-x-server-xwayland  i386-linux-gnu-true  i386-linux-gnu-wflinfo  x86_64-linux-gnu-capsule-capture-libs  x86_64-linux-gnu-check-locale  x86_64-linux-gnu-check-va-api  x86_64-linux-gnu-check-vdpau  x86_64-linux-gnu-check-vulkan  x86_64-linux-gnu-detect-lib  x86_64-linux-gnu-detect-platform  x86_64-linux-gnu-inspect-library  x86_64-linux-gnu-true  x86_64-linux-gnu-wflinfo
pressure-vessel/metadata/: README.txt  VERSION.txt  elfutils.txt  glib2.0.txt  libcap2.txt  libselinux.txt  packages.txt  sources.txt
sniper_platform_0.20231211.70175/: metadata
sniper_platform_0.20231211.70175/files/etc/: debian_chroot  magic.mime  vdpau_wrapper.cfg
sniper_platform_0.20231211.70175/files/sbin/: fsck  fstrim  isosize  ldattach  logsave  mkfs.minix  mkswap  pam-auth-update  readprofile  rmt-tar  rtcwake  update-ca-certificates  update-passwd
sniper_platform_0.20240125.75305/: metadata
sniper_platform_0.20240125.75305/files/etc/: debian_chroot  mime.types  xattr.conf
sniper_platform_0.20240125.75305/files/sbin/: blkdiscard  blkid  blkzone  chmem  chroot  faillock  fdformat  findfs  fsck.cramfs  getcap  hwclock  iconvconfig  killall5  ldconfig  locale-gen  mkfs  pivot_root  raw  runuser  setcap  tzconfig  wipefs  zic  zramctl
src/: lib.rs
subprojects/: reaper.wrap
systemd/units/: gamescope-dbus.service.in
tests/: test_config.sh  test_delta.py  test_flock.sh  test_install.sh  test_install_obsolete.sh  test_offline.sh  test_proton_resume.sh  test_resume.sh  test_update.sh  test_winetricks.sh
tests/testdata/: winetricks_verbs.txt
tools/: WIP-notes.txt  ulwgl-run-cli  umu-run-cli  umu-run-posix
umu/: __init__.py  __main__.py  meson.build  pyproject.toml  reaper  ruff.toml  umu-run.in  umu_bspatch.py  umu_consts.py  umu_dl_util.py  umu_log.py  umu_plugins.py  umu_proton.py  umu_reaper.py  umu_run.py  umu_runtime.py  umu_steammode.py  umu_test.py  umu_test_plugins.py  umu_util.py  umu_version.json.in
umu/umu-launcher/: compatibilitytool.vdf  meson.build  toolmanifest.vdf  umu-run.in
umu/vdf/: __init__.py  vdict.py
var/tmp-AZPKH2/: .ref  etc  lib32  lib64  overrides
var/tmp-AZPKH2/usr/: manifest.dpkg
(+2949 files in other folders)
