[package]
name = "umu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "umu_delta"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
ssh-key = { version = ">=0.5.1", default-features = false, features = [
    "ed25519",
    "alloc",
] }

[profile.release]
opt-level = 2
lto = true
